syntax = "proto3";

package com.github.moonkev.math.v1;

option java_multiple_files = true;

service Math {
  rpc Fibonacci (FibonacciRequest) returns (FibonacciResponse) {}
  rpc FibonacciStream (stream FibonacciRequest) returns (stream FibonacciResponse) {}
}

message FibonacciRequest {
  int32 n = 1;
}

message FibonacciResponse {
  int32 result = 1;
}
